<resources>
    <string name="whats_new_title">Check out what has changed</string>
    <string name="whats_new">Whats new?</string>
    <string name="text_was_copied_to_clipboard">Text copied to clipboard.</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="image_could_not_be_read">The image was not found in the data sent.</string>
    <string name="image_does_not_exist">The image was not found on your phone.</string>
    <string name="camera_app_not_found">Camera app not found.</string>
    <string name="gallery_io_error">Image could not be loaded.</string>
    <string name="media_store_returned_null">Gallery returned no image to me.</string>
    <string name="camera_app_error">Camera app error.</string>
    <string name="camera_no_image_returned">Camera app returned no image.</string>
    <string name="please_wait">Please wait</string>
    <string name="loading_image">Loading image..</string>
    <string name="please_tap_on_column">Please tap on a text column first</string>
    <string name="get_more_languages">Get more languages</string>
    <string name="aborts_scan">Aborts current scan!</string>
    <string name="send_mail">Drop me a line.</string>
    <string name="hocr2pdf_title"><a href="http://www.exactcode.com/site/open_source/exactimage/hocr2pdf/">hocr2pdf</a> from exactCODE</string>
    <string name="hocr2pdf_summary">hocr2pdf is a command line front-end for the image processing library to create perfectly layouted, searchable PDF files from hOCR, annotated HTML, input obtained from an OCR system.</string>
    <string name="leptonica_title"><a href="http://www.leptonica.com/">leptonica</a></string>
    <string name="leptonica_summary">Leptonica is a pedagogically-oriented open source site containing software that is broadly useful for image processing and image analysis applications.</string>
    <string name="tesseract_ocr_title"><a href="https://code.google.com/p/tesseract-ocr/">tesseract-ocr</a></string>
    <string name="tesseract_ocr_summary">Tesseract is probably the most accurate open source OCR engine available.</string>
    <string name="contact_welcome_text">Hi, my name is Renard. I have created the text fairy in my free time. I hope she is of use to you.</string>
    <string name="download_failed">Downloading of %1$s failed!</string>
    <string name="language_downloaded">%1$s language data downloaded</string>
    <string name="app_name">Text Fairy</string>
    <string name="tips">Tips</string>
    <string name="ocr_language_delete">delete</string>
    <string name="download_title">Language data for %s</string>
    <string name="ocr_language_title">Choose OCR Language</string>
    <string name="pref_summary_rate">Rate the text fairy</string>
    <string name="pref_summary_license">Learn about the software that was used to create the Textfairy</string>
    <string name="pref_summary_contact">Learn about the creator and supply feedback</string>
    <string name="pref_summary_default_ocr_lang">Download and manage languages for text recognition.</string>
    <string name="pref_summary_data_directory">Specify the directory where the text fairy should look for language files. Only change this if you know what you are doing.</string>
    <string name="pref_title_data_directory">Tessdata directory</string>
    <string name="pref_title_rate">Rate</string>
    <string name="pref_title_default_ocr_lang">Document language</string>
    <string name="pref_title_help">Show tips</string>
    <string name="pref_title_contact">Contact information</string>
    <string name="pref_title_license">Licence info</string>
    <string name="pref_summary_help">Tips for improving the optical character recognition (OCR)</string>
    <string name="error_create_file">I\'m sorry but was not able to store your photo on the SD card.</string>
    <string name="share_subject">scanned text</string>
    <string name="save_success">Save successful</string>
    <string name="save_fail">Save failed!</string>
    <string name="share_chooser_title">Select how you want to share the text</string>
    <string name="progress_start">starting OCR Process</string>
    <string name="download_language">download</string>
    <string name="progress_dewarp">Straightening text</string>
    <string name="progress_ocr">Optical character recognition in progress</string>
    <string name="delete">Delete </string>
    <string name="edit_title">Change title</string>
    <string name="cancel">Cancel</string>
    <string name="edit_dialog_title">Enter a title for your document</string>
    <string name="delete_error">Sorry, I could not delete this document</string>
    <string name="error_could_not_take_photo">Sorry, I could not read the photo</string>
    <string name="empty" />
    <string name="cropping_image">Cropping image</string>
    <string name="error_title">Error</string>
    <string name="error_load_file">I\'m sorry but I was not able to find the file. Maybe it was deleted?</string>
    <string name="pdf_creation_message">Creating  your PDF!</string>
    <string name="option_view_mode">switch view</string>
    <string name="document_layout_dialog">What shall I do?</string>
    <string name="layout_complex">Scan multiple columns of text</string>
    <string name="layout_simple">Scan a single column of text</string>
    <string name="saving_document">Saving Document</string>
    <string name="button_column_pick_completed">start text recognition</string>
    <string name="export_as_pdf">create PDF</string>
    <string name="delete_language_title">Delete %1$s?</string>
    <string name="delete_language_message">You\'ll free up %1$d kb.</string>
    <string name="delete_dialog_message">Deleting Documents..</string>
    <string name="progress_pfd_creation">Creating page %1$d/%2$d for %3$s.</string>
    <string name="option_text">text settings</string>
    <string name="option_content">table of content</string>
    <string name="option_line_spacing">line spacing</string>
    <string name="option_text_alignment">text alignment</string>
    <string name="options_preview_text">This is a preview of your current text settings. Press the back key to continue reading.\nLorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</string>
    <string name="progress_analyse_layout">I\'m analysing the layout. Please wait some seconds.</string>
    <string name="progress_image_detection">Searching for text</string>
    <string name="progress_assemble_pix">I\'m assembling the final picture now.</string>
    <string name="progress_choose_columns">Please choose the text and images you want in the final document</string>
    <string name="new_photo">new photo</string>
    <string name="no_sd_card">No SD card mounted. Is the phone connected to your pc? If so please remove it and try again.</string>
    <string name="rotate_right">rotate right</string>
    <string name="rotate_left">rotate left</string>
    <string name="content_description_fairy">the helpful text fairy</string>
    <string name="crop_title">Choose image section</string>
    <string name="text_options_title">change your text settings</string>
    <string name="app_options_title">Change your settings</string>
    <string name="edit_title_hint">enter a title</string>
    <string name="option_gallery_title">pick an image from the gallery</string>
    <string name="option_camera_title">make a new photo</string>
    <string name="option_preference_title">preferences</string>
    <string name="show_tips">show tips</string>
    <string name="document_help_title">You can manage your document here.</string>
    <string name="fairy_welcome_bubble">I\'m the Text Fairy</string>
    <string name="new_photo_gallery">pick gallery photo</string>
    <string name="show_documents">manage documents</string>
    <string name="join">join</string>
    <string name="join_documents_title">Joining Documents</string>
    <string name="join_documents_result">%1$d documents joined</string>
    <string name="start_app">let\'s go</string>
    <string name="install_error_disk_space">Not enough disk space. You need to free  %1$d MB on your SD card</string>
    <string name="install_error">Could not install configuration files.</string>
    <string name="toc_title">table of contents</string>
    <string name="start_text_1">What i can do!…</string>
    <string name="start_text_2">I extract editable text from pictures. Tap on me to learn more…</string>
    <string name="start_text_3">Take a new picture or chose one from your gallery…</string>
    <string name="start_text_4">Crop the picture and tell me if it contains more than one column of text…</string>
    <string name="start_text_5">You can now edit the scanned document or send it away as pdf file…</string>
    <string name="start_text_6">Try it out! I will be helping you if you got question…</string>
    <string name="start_text_7">… but do not forget:  even  androids are not perfekt. Not every picture can be converted to text…</string>
    <string name="start_text_8">But i\'ll do my best…</string>
    <string name="start_text_9">You can send me feedback. Tap on preferences to find the contact details.</string>
    <string name="start_text_10">What is a robot’s favorite type of music?…</string>
    <string name="start_text_11">Heavy metal!</string>
    <string name="start_text_12">Two bytes meet.  The first byte asks, “Are you ill?” The second byte replies…</string>
    <string name="start_text_13">“No, just feeling a bit off.”</string>
    <string name="start_text_14">There are two ways to write error-free computer programs…</string>
    <string name="start_text_15">only the third one works.</string>
    <string name="start_text_16">In the beginning God created the Bit and the Byte…</string>
    <string name="start_text_17">And from those he created the Word.</string>
    <string name="start_text_18">Why are lawyers safe from the threat of automation taking over their professions…</string>
    <string name="start_text_19">No one would build a robot to do nothing.</string>
    <string name="start_text_20">A robot walks into a bar…</string>
    <string name="start_text_21">He looks at the bartender and says "Can I get a screwdriver?"</string>
    <string name="document_list_help_title">Here you can manage your scanned documents</string>
    <string name="toc_help_title">Here you see a list of all pages in the document</string>
    <string name="no_ocr">No ocr. Save image unchanged.</string>
    <string name="crop_help_title">You can crop and rotate your photo now</string>
    <string name="continue_ocr">continue</string>
    <string name="default_ocr_language">eng</string>
    <string name="default_ocr_display_language">English</string>
    <string name="title_activity_contact">Contact</string>
    <string name="action_settings">Settings</string>
    <string name="ocr_accuracy">OCR accuracy: %1$d</string>
    <string name="text_to_speech">speak text</string>
    <string name="ocr_result_is_bad">That did not go so well. I hope the tips help.</string>
    <string name="ocr_result_is_ok">I think i got most of the text.</string>
    <string name="ocr_result_is_good">Yeah I\'m happy with my reading skills!</string>
    <string name="play">play</string>
    <string name="stop">stop</string>
    <string name="tts_init_error">Text to speech could not load.</string>
    <string name="open_settings">speech settings</string>
    <string name="set_tts_language">Please set the appropriate language in your text to speech settings.</string>
    <string name="join_beta_test_community">Join the beta testers community.</string>
    <string name="join_beta_program">Become a beta tester</string>
    <string name="follow_steps">Please follow these steps</string>
    <string name="first_step">First step</string>
    <string name="second_step">Second step</string>
</resources>