<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
<!--
    <item
        android:id="@+id/item_edit"
        android:icon="@drawable/ic_action_edit"
        android:showAsAction="ifRoom"
        android:title="@string/edit_title"/>
       -->
    <item
        android:id="@+id/item_view_mode"
        android:icon="@drawable/ic_action_mode"
        android:showAsAction="ifRoom"
        android:title="@string/option_view_mode">
    </item>
    <item
        android:id="@+id/item_text_options"
        android:icon="@drawable/ic_action_preferences"
        android:showAsAction="ifRoom"
        android:title="@string/option_text">
    </item>
    <item
        android:id="@+id/item_content"
        android:icon="@drawable/ic_action_content"
        android:showAsAction="ifRoom"
        android:title="@string/option_content">
    </item>
    <item
        android:id="@+id/item_delete"
        android:icon="@drawable/ic_action_delete"
        android:showAsAction="ifRoom"
        android:title="@string/delete">
    </item>
    <item
        android:id="@+id/item_export_as_pdf"
        android:icon="@drawable/ic_action_pdf"
        android:showAsAction="ifRoom"
        android:title="@string/export_as_pdf">
    </item>
    <item
        android:id="@+id/item_copy_to_clipboard"
        android:icon="@drawable/ic_action_content_copy"
        android:showAsAction="ifRoom"
        android:title="@string/copy_to_clipboard">
    </item>
    <item
        android:id="@+id/item_text_to_speech"
        android:icon="@drawable/ic_action_text_to_speech"
        android:showAsAction="ifRoom"
        android:title="@string/text_to_speech">
    </item>
</menu>