<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:padding="@dimen/default_element_padding"
            android:layout_height="wrap_content"
            android:fillViewport="true">

    <LinearLayout
        android:clickable="true"
        android:background="@drawable/btn_start_activity2"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <TextView
            android:drawablePadding="@dimen/default_element_padding"
            android:layout_marginBottom="32dp"
            android:layout_marginTop="@dimen/default_element_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/follow_steps"
            android:textAppearance="?android:attr/textAppearanceLarge"/>
\
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/first_step"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:background="@color/grey2"/>

        <TextView
            android:id="@+id/textView_join_community"
            android:layout_width="wrap_content"
            android:drawablePadding="@dimen/default_element_padding"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_element_padding"
            android:gravity="left|center_vertical"
            android:drawableLeft="@drawable/gplus"
            android:text="@string/join_beta_test_community"
            android:textAppearance="?android:attr/textAppearanceMedium"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="If you are not a member the link below won't work"
            style="@style/contribute_bullet_point"/>

        <TextView
            android:layout_marginTop="@dimen/default_element_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/second_step"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:background="@color/grey2"/>

        <TextView
            android:id="@+id/textView_become_tester"
            android:drawablePadding="@dimen/google_play_icon_padding"
            android:drawableLeft="@drawable/google_play_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_element_padding"
            android:gravity="left|center_vertical"
            android:text="@string/join_beta_program"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="You can opt out of the beta program anytime"
            style="@style/contribute_bullet_point"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Please drop me a mail if you find a bug"
            style="@style/contribute_bullet_point"/>
    </LinearLayout>


</ScrollView>